[package]
name = "shami_rs"
description = "A Lightweight, Secure, and Easy-to-Use Shamir's Secret Sharing Library"
version = "0.1.0"
authors = ["Euan Deas"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
experimental = []

[dependencies]
bip39 = { git = "https://github.com/euandeas/rust-bip39", features = ["all-languages"] }
block-padding = "0.3.3"
chacha20poly1305 = "0.10.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
